# git-perfdiff

./: Cargo.toml  LICENSE  lefthook.yaml
.github/workflows/: ci.yaml
src/: cli.rs  command.rs  config.rs  git.rs  lib.rs  main.rs  measurement.rs
src/command/: config.rs  validation.rs
src/config/: cli.rs  envvars.rs  execution_context.rs  file.rs  mod.rs  output.rs  test.rs  tests.rs
src/config/command/: mod.rs  validation.rs
src/config/output/: filters.rs  mod.rs  tests.rs
tests/: integration.rs
tests/utils/: mod.rs
