[package]
name = "git-perfdiff"
version = "0.0.1"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
clap = { version = "4.5.20", features = ["derive", "string"] }
git2 = "0.19.0"
which = "6.0.3"

[lints.rust]
missing_docs = "deny"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "deny", priority = -1 }

missing-docs-in-private-items = "warn"
