[package]
name = "git-perfdiff"
version = "0.0.1"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.26", features = ["derive", "string"] }
git2 = "0.20.0"
minijinja = { version = "2.7.0", features = ["builtins", "loader"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
sysinfo = "0.33.1"
toml = "0.8.19"
which = "7.0.1"

[lints.rust]
missing_docs = "deny"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }

missing-docs-in-private-items = "warn"
